alignment fixes

--- a/frontend/assets/css/index.css
+++ b/frontend/assets/css/index.css
@@ -155,6 +155,9 @@
 	display: flex;
 	margin: 0 5%;
 	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	min-height: screen;
 }
 
 .categories h2 {
@@ -163,11 +166,11 @@
 
 .categories-cards {
 	display: grid;
+	justify-content: center;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(2, 1fr);
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
-	margin: 0 5%;
+	grid-column-gap: 30px;
+	grid-row-gap: 30px;
 }
 
 .category-card {
@@ -182,6 +185,10 @@
 	font-size: 14px;
 	margin-top: 10px;
 	font-weight: 500;
+}
+
+.category-card:hover p {
+	cursor: pointer;
 }
 
 .categories-img-wrapper {
@@ -236,7 +243,7 @@
 }
 
 .categories-img-wrapper:hover .hover-btn {
-	transform: translateX(-50%) translateY(0); /* move to center line */
-	bottom: 40%; /* vertical center */
+	transform: translateX(-50%) translateY(0);
+	bottom: 40%;
 	opacity: 1;
 }
